Prevent the image from shrinking below the fixed size, Fix the issue where content overflows if Product Title/ Price name are big.

--- a/packages/blocks-next/src/blocks/cart-line-item-image/style.scss
+++ b/packages/blocks-next/src/blocks/cart-line-item-image/style.scss
@@ -12,3 +12,7 @@
 		object-fit: contain;
 	}
 }
+
+.sc-cart-line-item-image-wrap {
+	flex-shrink: 0; // Prevent the image from shrinking below the fixed size.
+}
